# frdm-fan-controller

./: .gitignore  .gitmodules  CMakeLists.txt  configure_gdb.sh  flash.jlink  install_cross_spdlog.sh  jlink_flash.sh  launch_jlink_gdb_server.sh
cmake/: gcc-arm.cmake
ext/: CMakeLists.txt
ext/mbed-os-lib/: CMakeLists.txt
src/: CMakeLists.txt  main.cpp
src/bluetooth/: tinysine.cpp  tinysine.h
src/usb/: usb_fan_controller.cpp  usb_fan_controller.h
src/util/: frdm_fc_io.cpp  frdm_fc_io.h  frdm_fc_pinout.h  logcat.cpp  logcat.h
